AickuniParser.java
// Generated from Aickuni.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AickuniParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPARIT=1, OPREL=2, OPBOOL=3, BOOL=4, PARA=5, ENQUANTO=6, SE=7, ENTAO=8, 
		SENAO=9, FUNC=10, ES=11, ABLOCO=12, FBLOCO=13, TIPO=14, APAREN=15, FPAREN=16, 
		RETORNA=17, NUM=18, ID=19, TEXTO=20, SEP=21, ATR=22, DELIM=23, A=24, WS=25;
	public static final int
		RULE_programa = 0, RULE_comando = 1, RULE_declaracao = 2, RULE_atribuicao = 3, 
		RULE_entradasaida = 4, RULE_exprarit = 5, RULE_exprlogi = 6, RULE_exprcomp = 7, 
		RULE_exprcond = 8, RULE_exprrepe = 9, RULE_funcao = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "comando", "declaracao", "atribuicao", "entradasaida", "exprarit", 
			"exprlogi", "exprcomp", "exprcond", "exprrepe", "funcao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'PARA'", "'ENQUANTO'", "'SE'", "'ENTAO'", 
			"'SENAO'", null, null, "'{'", "'}'", null, "'('", "')'", "'RETORNA'", 
			null, null, null, "','", "'ATRIBUI'", "';'", "'A'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPARIT", "OPREL", "OPBOOL", "BOOL", "PARA", "ENQUANTO", "SE", 
			"ENTAO", "SENAO", "FUNC", "ES", "ABLOCO", "FBLOCO", "TIPO", "APAREN", 
			"FPAREN", "RETORNA", "NUM", "ID", "TEXTO", "SEP", "ATR", "DELIM", "A", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aickuni.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AickuniParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> DELIM() { return getTokens(AickuniParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(AickuniParser.DELIM, i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(22);
				comando();
				setState(23);
				match(DELIM);
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENQUANTO) | (1L << SE) | (1L << FUNC) | (1L << ES) | (1L << TIPO) | (1L << ATR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(AickuniParser.DELIM, 0); }
		public EntradasaidaContext entradasaida() {
			return getRuleContext(EntradasaidaContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public ExprcondContext exprcond() {
			return getRuleContext(ExprcondContext.class,0);
		}
		public ExprrepeContext exprrepe() {
			return getRuleContext(ExprrepeContext.class,0);
		}
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comando);
		int _la;
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ES:
			case TIPO:
			case ATR:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TIPO) {
					{
					{
					setState(29);
					declaracao();
					}
					}
					setState(34);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(37);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ES:
					{
					setState(35);
					entradasaida();
					}
					break;
				case ATR:
					{
					setState(36);
					atribuicao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(39);
				match(DELIM);
				}
				break;
			case ENQUANTO:
			case SE:
			case FUNC:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SE:
					{
					setState(41);
					exprcond();
					}
					break;
				case ENQUANTO:
					{
					setState(42);
					exprrepe();
					}
					break;
				case FUNC:
					{
					setState(43);
					funcao();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode TIPO() { return getToken(AickuniParser.TIPO, 0); }
		public TerminalNode WS() { return getToken(AickuniParser.WS, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitDeclaracao(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(TIPO);
			setState(49);
			match(WS);
			setState(50);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribuicaoContext extends ParserRuleContext {
		public TerminalNode ATR() { return getToken(AickuniParser.ATR, 0); }
		public TerminalNode WS() { return getToken(AickuniParser.WS, 0); }
		public TerminalNode A() { return getToken(AickuniParser.A, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public TerminalNode NUM() { return getToken(AickuniParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(AickuniParser.TEXTO, 0); }
		public ExpraritContext exprarit() {
			return getRuleContext(ExpraritContext.class,0);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(ATR);
			setState(53);
			match(WS);
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(54);
				match(NUM);
				}
				break;
			case 2:
				{
				setState(55);
				match(TEXTO);
				}
				break;
			case 3:
				{
				setState(56);
				exprarit();
				}
				break;
			case 4:
				{
				setState(57);
				exprlogi();
				}
				break;
			case 5:
				{
				setState(58);
				exprcomp();
				}
				break;
			}
			setState(61);
			match(A);
			setState(62);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradasaidaContext extends ParserRuleContext {
		public TerminalNode ES() { return getToken(AickuniParser.ES, 0); }
		public TerminalNode WS() { return getToken(AickuniParser.WS, 0); }
		public TerminalNode ID() { return getToken(AickuniParser.ID, 0); }
		public TerminalNode NUM() { return getToken(AickuniParser.NUM, 0); }
		public TerminalNode TEXTO() { return getToken(AickuniParser.TEXTO, 0); }
		public ExpraritContext exprarit() {
			return getRuleContext(ExpraritContext.class,0);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public EntradasaidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entradasaida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterEntradasaida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitEntradasaida(this);
		}
	}

	public final EntradasaidaContext entradasaida() throws RecognitionException {
		EntradasaidaContext _localctx = new EntradasaidaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entradasaida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(ES);
			setState(65);
			match(WS);
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(66);
				match(ID);
				}
				break;
			case 2:
				{
				setState(67);
				match(NUM);
				}
				break;
			case 3:
				{
				setState(68);
				match(TEXTO);
				}
				break;
			case 4:
				{
				setState(69);
				exprarit();
				}
				break;
			case 5:
				{
				setState(70);
				exprlogi();
				}
				break;
			case 6:
				{
				setState(71);
				exprcomp();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpraritContext extends ParserRuleContext {
		public TerminalNode OPARIT() { return getToken(AickuniParser.OPARIT, 0); }
		public List<TerminalNode> ID() { return getTokens(AickuniParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AickuniParser.ID, i);
		}
		public List<TerminalNode> NUM() { return getTokens(AickuniParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(AickuniParser.NUM, i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public ExpraritContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprarit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterExprarit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitExprarit(this);
		}
	}

	public final ExpraritContext exprarit() throws RecognitionException {
		ExpraritContext _localctx = new ExpraritContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprarit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(75);
				match(WS);
				}
			}

			setState(78);
			match(OPARIT);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(79);
				match(WS);
				}
			}

			setState(82);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprlogiContext extends ParserRuleContext {
		public TerminalNode OPBOOL() { return getToken(AickuniParser.OPBOOL, 0); }
		public List<TerminalNode> ID() { return getTokens(AickuniParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AickuniParser.ID, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(AickuniParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(AickuniParser.BOOL, i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public ExprlogiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprlogi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterExprlogi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitExprlogi(this);
		}
	}

	public final ExprlogiContext exprlogi() throws RecognitionException {
		ExprlogiContext _localctx = new ExprlogiContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprlogi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==BOOL || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(85);
				match(WS);
				}
			}

			setState(88);
			match(OPBOOL);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(89);
				match(WS);
				}
			}

			setState(92);
			_la = _input.LA(1);
			if ( !(_la==BOOL || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprcompContext extends ParserRuleContext {
		public TerminalNode OPREL() { return getToken(AickuniParser.OPREL, 0); }
		public List<TerminalNode> ID() { return getTokens(AickuniParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AickuniParser.ID, i);
		}
		public List<TerminalNode> NUM() { return getTokens(AickuniParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(AickuniParser.NUM, i);
		}
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public ExprcompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprcomp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterExprcomp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitExprcomp(this);
		}
	}

	public final ExprcompContext exprcomp() throws RecognitionException {
		ExprcompContext _localctx = new ExprcompContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprcomp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(95);
				match(WS);
				}
			}

			setState(98);
			match(OPREL);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(99);
				match(WS);
				}
			}

			setState(102);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprcondContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(AickuniParser.SE, 0); }
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public TerminalNode ENTAO() { return getToken(AickuniParser.ENTAO, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public List<TerminalNode> SENAO() { return getTokens(AickuniParser.SENAO); }
		public TerminalNode SENAO(int i) {
			return getToken(AickuniParser.SENAO, i);
		}
		public List<ExprcondContext> exprcond() {
			return getRuleContexts(ExprcondContext.class);
		}
		public ExprcondContext exprcond(int i) {
			return getRuleContext(ExprcondContext.class,i);
		}
		public List<TerminalNode> DELIM() { return getTokens(AickuniParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(AickuniParser.DELIM, i);
		}
		public ExprcondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprcond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterExprcond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitExprcond(this);
		}
	}

	public final ExprcondContext exprcond() throws RecognitionException {
		ExprcondContext _localctx = new ExprcondContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_exprcond);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(SE);
			setState(105);
			match(WS);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(106);
				exprlogi();
				}
				break;
			case 2:
				{
				setState(107);
				exprcomp();
				}
				break;
			}
			setState(110);
			match(WS);
			setState(111);
			match(ENTAO);
			setState(112);
			match(WS);
			setState(113);
			comando();
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					match(WS);
					setState(115);
					match(SENAO);
					setState(125);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
					case 1:
						{
						setState(116);
						exprcond();
						}
						break;
					case 2:
						{
						setState(122);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(117);
								comando();
								setState(118);
								match(DELIM);
								}
								} 
							}
							setState(124);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
						}
						}
						break;
					}
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprrepeContext extends ParserRuleContext {
		public TerminalNode ENQUANTO() { return getToken(AickuniParser.ENQUANTO, 0); }
		public List<TerminalNode> WS() { return getTokens(AickuniParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(AickuniParser.WS, i);
		}
		public TerminalNode ABLOCO() { return getToken(AickuniParser.ABLOCO, 0); }
		public TerminalNode FBLOCO() { return getToken(AickuniParser.FBLOCO, 0); }
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public ExprlogiContext exprlogi() {
			return getRuleContext(ExprlogiContext.class,0);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<TerminalNode> DELIM() { return getTokens(AickuniParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(AickuniParser.DELIM, i);
		}
		public ExprrepeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprrepe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).enterExprrepe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AickuniListener ) ((AickuniListener)listener).exitExprrepe(this);
		}
	}

	public final ExprrepeContext exprrepe() throws RecognitionException {
		ExprrepeContext _localctx = new ExprrepeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_exprrepe);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ENQUANTO);
			setState(133);
			match(WS);
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(134);
				exprcomp();
				}
				break;
			case 2:
				{
				setState(135);
				exprlogi();
				}
				break;
			}
			setState(138);
			match(WS);
			setState(139);
			match(ABLOCO);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENQUANTO) | (1L << SE) | (1L << FUNC) | (1L << ES) | (1L << TIPO) | (1L << ATR))) != 0)) {
				{
				{
				setState(140);
				comando();
				setState(141);
				match(DELIM);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(FBLOCO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
